--- a/master.css
+++ b/master.css
@@ -1,5 +1,5 @@
 *{
-  font-family: 'Bowlby One SC', cursive;
+font-family: 'Slabo 27px', serif;
 
 }
 
@@ -9,6 +9,34 @@ body{
 li{
   font-size:26pt;
 }
+.flex{
+  display: flex;
+  justify-content: center;
+
+}
+input{
+min-width: 500px;
+height: 100px;
+border-radius: 20px;
+outline:none;
+font-family: monospace;
+font-size: 20pt;
+padding: 3px 0px 3px 3px;
+margin: 5px 1px 3px 0px;
+border: 5px solid rgba(81, 238, 205, 0.75);
+box-shadow:0px 5px 20px rgb(64, 64, 64);
+
+
+}
+input:focus{
+  box-shadow:0px 15px 20px rgb(64, 64, 64);
+
+  padding: 3px 0px 3px 3px;
+  margin: 5px 1px 3px 0px;
+  border: 5px solid rgba(81, 203, 238, 1);
+}
+
+
 .container {
   margin: 20px auto;
   width: 500px;
@@ -17,21 +45,13 @@ li{
 }
 
 h1 {
+  font-size: 84pt;
   text-align: center;
 }
 
-form {
-  padding: 0 0 20px;
-}
 
-input#new-todo {
-  display: block;
-  width: 478px;
-  border-radius: 3px;
-  border: 1px solid #e6e6e6;
-  padding: 10px;
-  font-size: 18px;
-}
+
+
 
 ul#todolist {
   list-style: none;
